Tweak html and body reset to correct scrolling on smaller viewports

--- a/src/reset.css
+++ b/src/reset.css
@@ -15,11 +15,11 @@
 }
 
 html {
-  height: 100%;
+  min-height: 100vh;
 }
 
 body {
   display: flow-root; /* prevent margin collapse */
 
-  height: 100%;
+  min-height: 100vh;
 }
